# python-androidenv

./: LICENSE.txt  Makefile  README.md  androidenv.py  build-numpy.sh  release.sh  setup.cfg  setup.py
patches/: patch-Python-3.10.0.txt
