[metadata]
author = Mansour Moufid
author_email = mansourmoufid@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: Android
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
description = Build native packages for Android
keywords = android
license = ISC
long_description = file: README.md
long_description_content_type = text/markdown
name = androidenv
url = https://github.com/mansourmoufid/python-androidenv
version = attr: androidenv.__version__
